# HomeAssistant-Tapo-P100-Control

./: .gitignore  README.md  hacs.json  pyproject.toml
custom_components/tapo_p100/: __init__.py  config_flow.py  const.py  device_info.py  discover.py  manifest.json  p100.py  strings.json  switch.py
custom_components/tapo_p100/translations/: en.json
tapo_p100_control/: device_info.py  manifest.json  p100.py  switch.py
tests/: __init__.py  test_init.py  test_p100.py
