[tool.poetry]
name = "tapo-p100"
description = "Tapo P100 smart plug integration for Home Assistant"
authors = ["K4CZP3R", "Extreeeme", "vhsw"]
license = "MIT"
version = "0.3.3"

[tool.poetry.dependencies]
python = "^3.8"
pycryptodome = "^3.10.1"
pkcs7 = "^0.1.2"

[tool.poetry.dev-dependencies]
aiohttp = "^3.7.4"
python-dotenv = "^0.17.1"
pylint = "^2.8.2"
black = "^21.5b1"
homeassistant = "^2021.5.4"
flake8 = "^3.9.2"
mypy = "^0.812"
pytest = "^6.2.4"
pytest-asyncio = "^0.15.1"
pytest-aiohttp = "^0.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.messages_control]
disable = ["logging-fstring-interpolation"]
